# django-csvpermissions

./: .gitignore  .isort.cfg  CHANGELOG.md  LICENSE  README.md  logo.psd  manage.py  pyproject.toml  requirements-optional.txt  requirements-toxenv.txt  tox.ini
.github/workflows/: django.yml
csv_permissions/: __init__.py  apps.py  evaluators.py  legacy.py  permissions.py  test_utils.py  types.py
doc/: background.md
test_csv_permissions/: factory.py  models.py  rules.py  settings.py  test_evaluators.py  test_legacy.py  test_parse.py  test_utils.py  tests.py
test_csv_permissions/migrations/: 0001_initial.py  0002_customerprofile_staffprofile.py
